style improvements for leapix logo

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -7,10 +7,14 @@
 
 .leapix-logo {
     content: url("../_static/leapix_light.png");
+    width: auto;
+    height: 50px;
 }
 
 @media (prefers-color-scheme: dark) {
     .leapix-logo {
         content: url("../_static/leapix_dark.png");
+        width: auto;
+        height: 50px;
     }
 }
